Bug 188199 incremental search in <select> fails if item starts with repeats of a letter r=jkeiser, sr=henry.jia